--- a/css/style.css
+++ b/css/style.css
@@ -793,7 +793,7 @@ table td input::placeholder {
 
   .video video {
     max-width: 100%;
-    max-height: 250px;
+    max-height: auto;
     height: auto;
   }
 
