--- a/css/style.css
+++ b/css/style.css
@@ -820,12 +820,11 @@ table td input::placeholder {
     min-height: auto;
   }
 
-.avanzado-con-gif-boton {
+  .avanzado-con-gif-boton {
     flex-direction: column;
-    align-items: flex-start; /* CORRECCIÓN: alinea a la izquierda */
+    align-items: left;
     margin-left: 0;
-}
-
+  }
 
   .gif-avanzado {
     width: 80px;
