--- a/css/style.css
+++ b/css/style.css
@@ -767,11 +767,12 @@ table td input::placeholder {
 
   /* -------------------- WOD DE LA SEMANA -------------------- */
   .wod-contenido {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    gap: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; /* alinea todo a la izquierda */
+      width: 100%;
+      gap: 1rem;
+      overflow-x: hidden; /* evita scroll horizontal */
   }
 
   .wod-descripcion,
@@ -791,11 +792,6 @@ table td input::placeholder {
     padding-left: 1rem;
   }
 
-  .video video {
-    max-width: 100%;
-    max-height: auto;
-    height: auto;
-  }
 
   /* -------------------- COACHES -------------------- */
   .coach-contenedor {
