--- a/css/style.css
+++ b/css/style.css
@@ -902,7 +902,7 @@ table td input::placeholder {
     cursor: pointer;
     color: #fff;
     position: relative;
-    z-index: 1000; /* se mantiene visible sobre todo */
+    z-index: 2000; /* se mantiene visible sobre todo */
   }
 
   .main-nav ul {
@@ -915,7 +915,7 @@ table td input::placeholder {
     left: 0;
     width: 100%;
     padding: 1rem;
-    z-index: 999; /* menú sobre todo */
+    z-index: 1500; /* menú sobre todo */
   }
 
   .main-nav ul.show {
@@ -931,9 +931,9 @@ table td input::placeholder {
    TABLA / HORARIOS - Versión Heracrossfit (ajustada a The Box)
    ========================================================== */
 @media (max-width: 480px) {
-   .tabla-horarios {
+.tabla-horarios {
   position: relative; /* asegura que z-index funcione */
-  z-index: 1;         /* menor que el menú */
+  z-index: 0;         /* menor que el menú */
 }
 
 table {
@@ -946,7 +946,9 @@ table {
 table th {
   background-color: #111;
   color: #fff;
-  font-weight: 300;
+  padding: 0.3rem;
+  text-align: center;
+  background-color: #000;
   }
 
 table td {
