--- a/style.css
+++ b/style.css
@@ -767,11 +767,10 @@ table td input::placeholder {
 
   /* -------------------- WOD DE LA SEMANA -------------------- */
   .wod-contenido {
-    display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    gap: 1rem;
+    align-items: center;
+    text-align: center;
+    gap: 0.6rem;
   }
 
   .wod-descripcion,
@@ -779,7 +778,7 @@ table td input::placeholder {
     width: 100%;
     max-width: 320px;
     margin: 0;
-    text-align: left;
+    text-align: center;
   }
 
   .wod-descripcion h3 {
@@ -821,9 +820,10 @@ table td input::placeholder {
   }
 
   .avanzado-con-gif-boton {
-    flex-direction: column;
-    align-items: left;
-    margin-left: 0;
+    width: 100%;
+    max-width: 320px;
+    margin: 0 auto 1rem auto;
+    min-height: auto;
   }
 
   .gif-avanzado {
@@ -902,7 +902,7 @@ table td input::placeholder {
     cursor: pointer;
     color: #fff;
     position: relative;
-    z-index: 1000; /* se mantiene visible sobre todo */
+    z-index: 2000; /* se mantiene visible sobre todo */
   }
 
   .main-nav ul {
@@ -915,7 +915,7 @@ table td input::placeholder {
     left: 0;
     width: 100%;
     padding: 1rem;
-    z-index: 999; /* menú sobre todo */
+    z-index: 1500; /* menú sobre todo */
   }
 
   .main-nav ul.show {
@@ -931,9 +931,9 @@ table td input::placeholder {
    TABLA / HORARIOS - Versión Heracrossfit (ajustada a The Box)
    ========================================================== */
 @media (max-width: 480px) {
-   .tabla-horarios {
+.tabla-horarios {
   position: relative; /* asegura que z-index funcione */
-  z-index: 1;         /* menor que el menú */
+  z-index: 0;         /* menor que el menú */
 }
 
 table {
@@ -946,7 +946,7 @@ table {
 table th {
   background-color: #111;
   color: #fff;
-  font-weight: 300;
+  font-weight: 150;
   }
 
 table td {
